<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_show_notifications"
        android:title="@string/pref_title_show_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="@string/pref_key_show_notifications"
        android:key="@string/pref_key_notification_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:dependency="@string/pref_key_show_notifications"-->
        <!--android:key="@string/pref_key_notification_vibrate"-->
        <!--android:title="@string/pref_title_vibrate" />-->

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:dependency="@string/pref_key_show_notifications"
        android:key="@string/pref_key_door_open_notification"
        android:title="@string/pref_title_door_open" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="@string/pref_key_show_notifications"
        android:key="@string/pref_key_door_open_too_long_notification"
        android:title="@string/pref_title_door_open_too_long" />

    !-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="@string/pref_key_show_notifications"
        android:key="@string/pref_key_door_auto_closed_notification"
        android:title="@string/pref_title_door_auto_closed" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_pi_address"
        android:inputType="textUri"
        android:key="@string/pref_key_pi_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_pi_address" />

    <EditTextPreference
        android:defaultValue="@string/pref_userID"
        android:inputType="text"
        android:key="@string/pref_key_userID"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_userID" />

    <!--&lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to-->
    <!--dismiss it. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<ListPreference-->
    <!--android:defaultValue="180"-->
    <!--android:entries="@array/pref_sync_frequency_titles"-->
    <!--android:entryValues="@array/pref_sync_frequency_values"-->
    <!--android:key="sync_frequency"-->
    <!--android:negativeButtonText="@null"-->
    <!--android:positiveButtonText="@null"-->
    <!--android:title="@string/pref_title_sync_frequency" />-->

    <!--&lt;!&ndash; This preference simply launches an intent when selected. Use this UI sparingly, per-->
    <!--design guidelines. &ndash;&gt;-->
    <!--<Preference android:title="@string/pref_title_system_sync_settings">-->
    <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->
    <!--</Preference>-->

    <!--<SwitchPreference-->
    <!--android:defaultValue="true"-->
    <!--android:key="example_switch"-->
    <!--android:summary="@string/pref_description_social_recommendations"-->
    <!--android:title="@string/pref_title_social_recommendations" />-->

    <!--&lt;!&ndash; NOTE: EditTextPreference accepts EditText attributes. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: EditTextPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<EditTextPreference-->
    <!--android:capitalize="words"-->
    <!--android:defaultValue="@string/pref_default_display_name"-->
    <!--android:inputType="textCapWords"-->
    <!--android:key="example_text"-->
    <!--android:maxLines="1"-->
    <!--android:selectAllOnFocus="true"-->
    <!--android:singleLine="true"-->
    <!--android:title="@string/pref_title_display_name" />-->

    <!--&lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to-->
    <!--dismiss it. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<ListPreference-->
    <!--android:defaultValue="-1"-->
    <!--android:entries="@array/pref_example_list_titles"-->
    <!--android:entryValues="@array/pref_example_list_values"-->
    <!--android:key="example_list"-->
    <!--android:negativeButtonText="@null"-->
    <!--android:positiveButtonText="@null"-->
    <!--android:title="@string/pref_title_add_friends_to_messages" />-->

</PreferenceScreen>
